--- a/test/test.html
+++ b/test/test.html
@@ -11,7 +11,7 @@
                  $.ajax({
                      url: "http://localhost:3001/get",
                      success: function(data){
-                         alert(data);
+                         console.log(data);
                      }
                  })
              })
